# cocos2d-bgfx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  copyres.bat
BGFX/: CMakeLists.txt  bgfx.props
BGFX/cmake/: bgfx.cmake  bx.cmake  examples.cmake  tools.cmake
BGFX/cmake/tools/: shaderc.cmake
Shader/: shaderall.bat  shaderbin.bat  shaderbindx11.bat  shaderbindx9.bat  shaderbinessl.bat  shaderbinmetal.bat
Shader/Draw/: fs_draw.sc  fs_graphics.sc  vs_graphics.sc
Shader/Label/: fs_labeldf.sc  fs_labeldfglow.sc  fs_labelgradient.sc  fs_labelgradientoutline.sc  fs_labelnormal.sc  fs_labeloutline.sc  varying.def.sc  vs_label.sc  vs_labelposition.sc
Shader/Sprite/: fs_spritegray.sc  fs_spritelight.sc  vs_spritemodel.sc
cmake/Modules/: CocosBuildSet.cmake
cocos/: Android.mk  CMakeLists.txt  ccHeader.cpp  ccHeader.h  cocos2d.h
cocos/2d/: CCAction.cpp  CCAction.h  CCActionCamera.cpp  CCActionCamera.h  CCActionCatmullRom.cpp  CCActionCatmullRom.h  CCActionEase.cpp  CCActionGrid.cpp  CCActionGrid3D.cpp  CCActionInstant.cpp  CCActionInstant.h  CCActionInterval.cpp  CCActionInterval.h  CCActionManager.cpp  CCActionManager.h  CCActionPageTurn3D.cpp  CCActionProgressTimer.cpp  CCActionTiledGrid.cpp  CCActionTween.cpp  CCAnimation.cpp  CCAnimation.h  CCAnimationCache.cpp  CCAnimationCache.h  CCAtlasNode.cpp  CCAtlasNode.h  CCAutoPolygon.cpp  CCAutoPolygon.h  CCClippingNode.cpp  CCClippingNode.h  CCClippingRectangleNode.cpp  CCClippingRectangleNode.h  CCComponent.cpp  CCComponent.h  CCComponentContainer.cpp  CCComponentContainer.h  CCDrawNode.cpp  CCDrawNode.h  CCDrawingPrimitives.cpp  CCDrawingPrimitives.h  CCEffectNode.cpp  (+79 more)
cocos/audio/: AudioEngine.cpp  CMakeLists.txt  Sound.cpp  Sound.h  SoundCache.cpp  SoundCache.h  libmodplug.vcxproj  libmodplug.vcxproj.filters  soloud.vcxproj  soloud.vcxproj.filters
cocos/audio/apple/: AudioCache.mm  AudioEngine-inl.mm  AudioPlayer.mm
cocos/audio/include/: AudioEngine.h  Export.h
cocos/base/: Async.cpp  Async.h  CCAsyncTaskPool.cpp  CCAsyncTaskPool.h  CCAutoreleasePool.cpp  CCAutoreleasePool.h  CCConfiguration.cpp  CCConfiguration.h  CCConsole.cpp  CCConsole.h  CCData.cpp  CCData.h  CCDirector.cpp  CCDirector.h  CCEvent.cpp  CCEvent.h  CCEventAcceleration.cpp  CCEventAcceleration.h  CCEventCustom.cpp  CCEventCustom.h  CCEventDispatcher.cpp  CCEventDispatcher.h  CCEventFocus.cpp  CCEventFocus.h  CCEventKeyboard.cpp  CCEventKeyboard.h  CCEventListener.cpp  CCEventListener.h  CCEventListenerAcceleration.cpp  CCEventListenerAcceleration.h  CCEventListenerCustom.cpp  CCEventListenerCustom.h  CCEventListenerFocus.cpp  CCEventListenerKeyboard.cpp  CCEventListenerKeyboard.h  CCEventListenerMouse.cpp  CCEventListenerTouch.cpp  CCEventListenerTouch.h  CCEventMouse.cpp  CCEventMouse.h  (+62 more)
cocos/math/: CCAffineTransform.h  CCGeometry.cpp  CCGeometry.h  CCVertex.cpp  CCVertex.h  Mat4.cpp  Mat4.h  Mat4.inl  MathUtil.cpp  MathUtil.h  Vec2.cpp  Vec3.h  Vec3.inl  Vec4.cpp  Vec4.h  Vec4.inl
cocos/network/: CCDownloader-curl.cpp  CCDownloader.cpp  CCIDownloaderImpl.h  CMakeLists.txt  HttpClient-apple.mm  HttpClient.cpp  HttpCookie.cpp  HttpRequest.h  SocketIO.cpp  SocketIO.h  Uri.cpp  WebSocket-apple.mm  WebSocket-libwebsockets.cpp  WebSocket.h
cocos/platform/: CCApplication.cpp  CCApplication.h  CCApplicationProtocol.cpp  CCApplicationProtocol.h  CCDevice.h  CCFileUtils.cpp  CCFileUtils.h  CCGLView.cpp  CCGLView.h  CCImage.cpp  CCImage.h  CCPlatformMacros.h  CCSAXParser.cpp  CCSAXParser.h  CCThread.cpp  CMakeLists.txt
cocos/renderer/: CCPrimitive.cpp  CCShaderCache.cpp  CCShaderCache.h  CCTexture2D.cpp  CCTexture2D.h  CCTextureAtlas.cpp  CCTextureAtlas.h  CCTextureCache.cpp  CCTextureCache.h  CCVertexIndexBuffer.cpp  CCVertexIndexBuffer.h  CCVertexIndexData.cpp  CCVertexIndexData.h  CMakeLists.txt  Program.cpp  Program.h  Renderer.cpp  Renderer.h
cocos/scripting/js-bindings/: CMakeLists.txt
cocos/scripting/js-bindings/auto/: jsb_cocos2dx_auto.cpp  jsb_cocos2dx_auto.hpp  jsb_cocos2dx_dragonbones_auto.cpp  jsb_cocos2dx_dragonbones_auto.hpp  jsb_cocos2dx_spine_auto.cpp  jsb_cocos2dx_spine_auto.hpp  jsb_cocos2dx_ui_auto.cpp  jsb_creator_graphics_auto.cpp
cocos/scripting/js-bindings/auto/api/: jsb_cocos2dx_auto_api.js  jsb_cocos2dx_dragonbones_auto_api.js  jsb_cocos2dx_spine_auto_api.js  jsb_cocos2dx_ui_auto_api.js
cocos/scripting/js-bindings/jswrapper/jsc/: Object.cpp
cocos/scripting/js-bindings/manual/: BaseJSAction.cpp  ScriptingCore.cpp  ScriptingCore.h  jsb_cocos2dx_audioengine_manual.cpp  jsb_cocos2dx_audioengine_manual.hpp  jsb_cocos2dx_extension_manual.cpp  jsb_cocos2dx_manual.cpp  jsb_conversions.cpp  jsb_conversions.hpp  jsb_creator_manual.cpp  jsb_global.cpp  jsb_helper.cpp  jsb_helper.hpp  jsb_module_register.cpp  jsb_node.cpp  jsb_opengl_node.cpp  jsb_opengl_node.hpp  jsb_socketio.cpp  jsb_spine_manual.cpp  jsb_websocket.cpp  jsb_xmlhttprequest.cpp
cocos/scripting/js-bindings/proj.ios_mac/cocos2d_js_bindings.xcodeproj/: project.pbxproj
cocos/scripting/js-bindings/proj.win32/: libjscocos2d.vcxproj  libjscocos2d.vcxproj.filters
cocos/scripting/js-bindings/script/: jsb.js  jsb_boot.js  jsb_cocos2d.js  jsb_create_apis.js
cocos/ui/: CMakeLists.txt  CocosGUI.cpp  GUIExport.h  UIHelper.cpp  UIHelper.h  UIScale9Sprite.cpp  UIScale9Sprite.h  UIVideoPlayer-ios.mm  UIVideoPlayer.h  UIWebView-inl.h  UIWebView.h  UIWebView.mm  UIWebViewImpl-ios.h  UIWebViewImpl-ios.mm  UIWidget.cpp  UIWidget.h
extensions/: Android.mk  CMakeLists.txt  ExtensionExport.h
extensions/assets-manager/: AssetsManagerEx.cpp  AssetsManagerEx.h  CCEventAssetsManagerEx.cpp  CCEventAssetsManagerEx.h  CCEventListenerAssetsManagerEx.cpp  CCEventListenerAssetsManagerEx.h  Manifest.cpp  Manifest.h
iOSProjects/Classes-bgfx/: AppDelegate.cpp  AppDelegate.h  jsb_module_register.cpp
iOSProjects/proj.ios_mac/: app-mobile.entitlements
licenses/: LICENSE_bgfx.txt
simulator/win32/: glfw3.lib
tools/bindings-generator/: generator.py
tools/simulator/: config.json
tools/tojs/: cocos2dx.ini  cocos2dx_spine.ini  genbindings.py
(+177 files in other folders)
